# OnHubDesktop

./: CMakeLists.txt  OnHubDesktopClient.pro  wifiapi.cpp  wifiapi.h
Models/OnHub/: station.h
OAuthClient/: authdialog.cpp  authdialog.ui
